# MLOps

./: CREATION_PLAN.md  LESSON_PROGRESS.md  NAVIGATION_GUIDE.md  README.md  START_HERE.md  cv_project_phase3_plan.md  cv_project_plan.md  requirements.txt
capstone_project/: Dockerfile  README.md  implementation_plan.md  requirements.txt
cv_mlops_project/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
cv_mlops_project/notebooks/: 01_data_setup_dvc.ipynb  02_training_tracking.ipynb  03_optimization_onnx.ipynb
cv_mlops_project/src/: app.py
module_01_foundations/: MODULE_TIMELINE.md  README.md  lesson_01_intro_to_mlops.ipynb  lesson_02_mlops_vs_devops.ipynb  lesson_03_ml_lifecycle.ipynb
module_02_reproducibility/: PROGRESS.md  README.md  data.csv  lesson_01_why_reproducibility.ipynb  lesson_02_git_and_dvc.ipynb  lesson_03_mlflow_basics.ipynb  lesson_04_mlflow_pytorch.ipynb  lesson_05_wandb_intro.ipynb  lesson_06_wandb_sklearn.ipynb  lesson_07_wandb_pytorch.ipynb  lesson_08_mlflow_vs_wandb.ipynb
module_03_data_engineering/: README.md  index_dump.txt  lesson_01_data_sources_formats.ipynb  lesson_02_etl_pipelines.ipynb  lesson_03_sampling_strategies.ipynb  lesson_04_data_leakage.ipynb  lesson_05_feature_stores_feast.ipynb  lesson_06_spark_basics.ipynb  lesson_06_spark_pyspark.ipynb  lesson_07_end_to_end_pipeline.ipynb  lesson_07_workflow_orchestration_prefect.ipynb
module_04_advanced_tooling/: lesson_01_hydra_config.ipynb  lesson_02_dependency_management.ipynb  lesson_03_code_quality.ipynb  lesson_04_testing_ml.ipynb  lesson_05_project_templates.ipynb  (+1 more)
(+117 files in other folders)
