[tool.poetry]
name = "cv_mlops_project"
version = "0.1.0"
description = "End-to-end Object Detection pipeline demonstrating MLOps best practices"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
torchvision = "^0.15.0"
ultralytics = "^8.0.0"  # For YOLOv8
hydra-core = "^1.3.0"
dvc = "^3.0.0"
wandb = "^0.15.0"
onnx = "^1.14.0"
onnxruntime = "^1.15.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
ruff = "^0.0.260"
notebook = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
